--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://sagarpatel9697.github.io/mini-meetups"
+  "homepage": "http://sagarpatel9697.github.io/mini-meetups/"
 }
